--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <style>
+        .centerImage{
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    </style>
+    
 </head>
 <body>
     <h1 style="text-align:center">Odin Recipes</h1>
+    <br>
+    <img src="./images/animeCooking.gif" alt="Anime cooking gif" width="50%" class="centerImage">
 </body>
 </html>
