--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <style>
-        .centerImage{
-        display:block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    </style>
-    
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1 style="text-align:center">Odin Recipes</h1>
