--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 style="text-align:center">Odin Recipes</h1>
+    <h1 style="text-align:center; font-family:fantasy; font-size: 45px;">Odin Recipes</h1>
     <br>
-    <img src="./images/animeCooking.gif" alt="Anime cooking gif" width="50%" class="centerImage">
+    <img src="./images/animeCooking.gif" alt="Anime cooking gif" width="45%" class="centerImage">
 </body>
 </html>
