Added a welcome message and source to the image.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <h1 style="text-align:center; font-family:fantasy; font-size: 45px;">Odin Recipes</h1>
     <br>
     <img src="./images/animeCooking.gif" alt="Anime cooking gif" width="45%" class="centerImage">
+    <p style="text-align:center">Source: The Garden of Words</p>
+    <br>
+
+    <p style="text-align:center; font-weight: bold; font-size: large;">Welcome to my recipe site! Below you will find a few 
+        recipes that I find
+        unique. Have fun trying to make them!
+    </p>
 </body>
 </html>
