Added unorded list with 3 recipes. The names are just placeholders for now.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <p style="text-align:center">Source: The Garden of Words</p>
     <br>
 
-    <p style="text-align:center; font-weight: bold; font-size: large;">Welcome to my recipe site! Below you will find a few 
+    <p style="text-align:center; font-weight: bold; font-size: larger;">Welcome to my recipe site! Below you will find a few 
         recipes that I find
         unique. Have fun trying to make them!
     </p>
+    <ul>
+        <li>Skillet Zucchini and Squash</li>
+        <li>Skillet Zucchini and Squash</li>
+        <li>Skillet Zucchini and Squash</li>
+    </ul>
 </body>
 </html>
