Modifed the list to use working links for each recipe.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         unique. Have fun trying to make them!
     </p>
     <ul>
-        <li>Skillet Zucchini and Squash</li>
-        <li>Skillet Zucchini and Squash</li>
-        <li>Skillet Zucchini and Squash</li>
+        <li><a href="recipes/zucchini.html">Skillet Zucchini and Squash</a></li>
+        <li><a href="recipes/macaroni.html">Simple Macaroni and Cheese</a></li>
+        <li> <a href="recipes/beef-stir-fry.html">Quick Beef Stir Fry</a></li>
     </ul>
 </body>
 </html>
