--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 style="text-align:center; font-family:fantasy; font-size: 45px;">Odin Recipes</h1>
+    <h1>Odin Recipes</h1>
     <br>
     <img src="./images/animeCooking.gif" alt="Anime cooking gif" width="45%" class="centerImage">
     <p style="text-align:center">Source: The Garden of Words</p>
