--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skillet Zucchini and Squash</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    
+    <h1>Skillet Zucchini and Squash</h1>
 </body>
 </html>
