Added dish image and sort description of what it is.

--- a/recipes/beef-stir-fry.html
+++ b/recipes/beef-stir-fry.html
@@ -10,5 +10,8 @@
 <body>
     <h1>Quick Beef Stir Fry</h1>
     <br>
+    <img src="../images/beef.jpg" alt="Beef Stir Fry" width="35%" class="centerImage">
+    <p style="font-weight: bold; font-size: large;">This beef and broccoli stir-fry comes together in just 25 minutes and 
+        only uses ingredients that most people have in their kitchen. If you don't then I guess that sucks for you.</p>
 </body>
 </html>
