Added ingredients list

--- a/recipes/beef-stir-fry.html
+++ b/recipes/beef-stir-fry.html
@@ -12,6 +12,20 @@
     <br>
     <img src="../images/beef.jpg" alt="Beef Stir Fry" width="35%" class="centerImage">
     <p style="font-weight: bold; font-size: large;">This beef and broccoli stir-fry comes together in just 25 minutes and 
-        only uses ingredients that most people have in their kitchen. If you don't then I guess that sucks for you.</p>
+        only uses ingredients that most people have in their kitchen. If you don't then I guess that sucks for you.
+    </p>
+    <br>
+    <p style="font-size:larger; font-weight: bold;"> <u>Ingredients</u> </p>
+    <ul>
+        <li>2 tablespoons vegetable oil</li>
+        <li>1 pound beef sirloin, cut into 2-inch strips</li>
+        <li>1.5 cups fresh broccoli florets</li>
+        <li>1 red bell pepper, cut into matchsticks</li>
+        <li>2 carrots, thinly sliced</li>
+        <li>1 green onion, chopped</li>
+        <li>1 teaspoon minced garlic</li>
+        <li>2 tablespoons soy sauce</li>
+        <li>2 tablespoons sesame seeds, toasted</li>
+    </ul>
 </body>
 </html>
