Added initial Directions section with empty ordered list.

--- a/recipes/beef-stir-fry.html
+++ b/recipes/beef-stir-fry.html
@@ -27,5 +27,9 @@
         <li>2 tablespoons soy sauce</li>
         <li>2 tablespoons sesame seeds, toasted</li>
     </ul>
+    <p style="font-size:larger; font-weight: bold;"> <u>Directions</u> </p>
+    <ol>
+        
+    </ol>
 </body>
 </html>
