Added some spacing to the list items in the styles.css Also edited some text in the directions for beef stir fry.

--- a/recipes/beef-stir-fry.html
+++ b/recipes/beef-stir-fry.html
@@ -30,12 +30,14 @@
     <p style="font-size:larger; font-weight: bold;"> <u>Directions</u> </p>
     <ol>
         <li>Heat vegetable oil in a large wok or skillet over medium-high heat; cook and stir beef until browned, 3 to 4 minutes.
-            Then,Move beef to the side of the wok and add broccoli, bell pepper, carrots, green onion, and garlic to the center of the wok. 
+            Then, move beef to the side of the wok and add broccoli, bell pepper, carrots, green onion, and garlic to the center of the wok. 
             Cook and stir vegetables for 2 minutes.
         </li>
+
         <li>Stir beef into vegetables and season with soy sauce and sesame seeds. 
             Continue to cook and stir until vegetables are tender, about 2 more minutes.
         </li>
+        
         <li>All Done! Enjoy!</li>
     </ol>
 </body>
