Added image and short description for Zucchini recipe.

--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>Skillet Zucchini and Squash</h1>
+    <br>
+    <img src="../images/skillet-zucchini.jpg" alt="Skillet Zucchini" width="25%" class="centerImage">
+    <p style="font-weight: bold; font-size: large;">Delicious all-vegetable side dish that uses
+        yellow squash, zucchini, onions, and red bell peppers as the main ingredients.
+    </p>
 </body>
 </html>
