--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -14,5 +14,18 @@
     <p style="font-weight: bold; font-size: large;">Delicious all-vegetable side dish that uses
         yellow squash, zucchini, onions, and red bell peppers as the main ingredients.
     </p>
+    <br>
+    <p style="font-size:larger; font-weight: bold;"> <u>Ingredients</u> </p>
+    <ul>
+        <li>1 tablespoon unsalted butter</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1/2 medium onion, chopped</li>
+        <li>1/2 medium red bell pepper, chopped</li>
+        <li>1 medium zucchini, cut into 1/4-inch slices </li>
+        <li>1 medium yellow squash, cut into 1/4-inch slices</li>
+        <li>Salt and freshly ground black pepper to taste</li>
+        <li>1 clove garlic, minced</li>
+        <li>Minced chives (optional)</li>
+    </ul>
 </body>
 </html>
