--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -27,5 +27,17 @@
         <li>1 clove garlic, minced</li>
         <li>Minced chives (optional)</li>
     </ul>
+    <p style="font-size:larger; font-weight: bold;"> <u>Directions</u> </p>
+    <ol>
+        <li>Heat butter and olive oil together in a large non-stick skillet over medium-high heat.</li>
+        <li>Add onion once butter is bubbly; cook and stir for 2 minutes.</li>
+        <li>Add bell pepper and cook for 1 minute. 
+            Then stir in yellow squash and zucchini slices. Season with salt and pepper. Cook, stirring, for about 3 minutes.
+        </li>
+        <li>Stir in minced garlic and cook, stirring, about 1 minute. 
+            Keep cooking, stirring continuously, until squash has desired texture, 2 to 3 minutes.
+        </li>
+        <li>Sprinkle with minced chives before serving if you want.</li>
+    </ol>
 </body>
 </html>
