--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -9,5 +9,19 @@
 </head>
 <body>
     <h1>Simple Macaroni and Cheese</h1>
+    <br>
+    <img src="../images/macaroni.jpg" alt="Macaroni and Cheese" width="35%" class="centerImage">
+    <p style="font-weight:bold; font-size: large;">A quick and easy Mac and Cheese recipe.</p>
+    <br>
+    <p style="font-size:larger; font-weight: bold;"> <u>Ingredients</u> </p>
+    <ul>
+        <li>1 (8 ounce) box elbow macaroni</li>
+        <li>1/4 cup butter</li>
+        <li>1/4 cup all-purpose flour</li>
+        <li>1/2 teaspoon of salt</li>
+        <li>Ground black pepper for taste</li>
+        <li>2 cups milk</li>
+        <li>2 cups shredded Cheddar cheese</li>
+    </ul>
 </body>
 </html>
