Added directions for macaroni.

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -23,5 +23,20 @@
         <li>2 cups milk</li>
         <li>2 cups shredded Cheddar cheese</li>
     </ul>
+    <p style="font-size:larger; font-weight: bold;"> <u>Directions</u> </p>
+    <ol>
+        <li>Bring a large pot of lightly salted water to a boil.
+            Cook elbow macaroni in the boiling water, stirring occasionally until cooked through but firm to the bite, 8 minutes.
+        </li>
+        <li>While cooking the macaroni, melt butter in another saucepan over medium heat. 
+            Add flour, salt, and pepper and stir until smooth, about 5 minutes.
+        </li>
+        <li>Pour in milk slowly to the melted butter and flour mix, while stirring continuously. 
+            Continue to cook and stir until mixture is smooth and bubbling, about 5 minutes, making sure the milk doesn't burn.
+        </li>
+        <li>Add Cheddar cheese and stir until melted, 2 to 4 minutes.</li>
+        <li>Drain macaroni and fold into cheese sauce until coated.</li>
+        <li>All done. If you want, you can use more cheese instead of just 2 cups.</li>
+    </ol>
 </body>
 </html>
