Added paragraph attributes to styles.css since I realized lots of the styles I was using were all the same except for center text. So by using the stylesheet, it makes it easier and less redundant. Also, removed all the redundant inline styles from the paragraph tags.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p style="text-align:center">Source: The Garden of Words</p>
     <br>
 
-    <p style="text-align:center; font-weight: bold; font-size: larger;">Welcome to my recipe site! Below you will find a few 
+    <p>Welcome to my recipe site! Below you will find a few 
         recipes that I find
         unique. Have fun trying to make them!
     </p>
