--- a/recipes/beef-stir-fry.html
+++ b/recipes/beef-stir-fry.html
@@ -11,11 +11,11 @@
     <h1>Quick Beef Stir Fry</h1>
     <br>
     <img src="../images/beef.jpg" alt="Beef Stir Fry" width="35%" class="centerImage">
-    <p style="font-weight: bold; font-size: large;">This beef and broccoli stir-fry comes together in just 25 minutes and 
+    <p>This beef and broccoli stir-fry comes together in just 25 minutes and 
         only uses ingredients that most people have in their kitchen. If you don't then I guess that sucks for you.
     </p>
     <br>
-    <p style="font-size:larger; font-weight: bold;"> <u>Ingredients</u> </p>
+    <p> <u>Ingredients</u> </p>
     <ul>
         <li>2 tablespoons vegetable oil</li>
         <li>1 pound beef sirloin, cut into 2-inch strips</li>
@@ -27,7 +27,7 @@
         <li>2 tablespoons soy sauce</li>
         <li>2 tablespoons sesame seeds, toasted</li>
     </ul>
-    <p style="font-size:larger; font-weight: bold;"> <u>Directions</u> </p>
+    <p> <u>Directions</u> </p>
     <ol>
         <li>Heat vegetable oil in a large wok or skillet over medium-high heat; cook and stir beef until browned, 3 to 4 minutes.
             Then, move beef to the side of the wok and add broccoli, bell pepper, carrots, green onion, and garlic to the center of the wok. 
@@ -37,7 +37,7 @@
         <li>Stir beef into vegetables and season with soy sauce and sesame seeds. 
             Continue to cook and stir until vegetables are tender, about 2 more minutes.
         </li>
-        
+
         <li>All Done! Enjoy!</li>
     </ol>
 </body>
