--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -11,9 +11,9 @@
     <h1>Simple Macaroni and Cheese</h1>
     <br>
     <img src="../images/macaroni.jpg" alt="Macaroni and Cheese" width="35%" class="centerImage">
-    <p style="font-weight:bold; font-size: large;">A quick and easy Mac and Cheese recipe.</p>
+    <p>A quick and easy Mac and Cheese recipe.</p>
     <br>
-    <p style="font-size:larger; font-weight: bold;"> <u>Ingredients</u> </p>
+    <p> <u>Ingredients</u> </p>
     <ul>
         <li>1 (8 ounce) box elbow macaroni</li>
         <li>1/4 cup butter</li>
@@ -23,7 +23,7 @@
         <li>2 cups milk</li>
         <li>2 cups shredded Cheddar cheese</li>
     </ul>
-    <p style="font-size:larger; font-weight: bold;"> <u>Directions</u> </p>
+    <p> <u>Directions</u> </p>
     <ol>
         <li>Bring a large pot of lightly salted water to a boil.
             Cook elbow macaroni in the boiling water, stirring occasionally until cooked through but firm to the bite, 8 minutes.
