--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -11,11 +11,11 @@
     <h1>Skillet Zucchini and Squash</h1>
     <br>
     <img src="../images/skillet-zucchini.jpg" alt="Skillet Zucchini" width="25%" class="centerImage">
-    <p style="font-weight: bold; font-size: large;">Delicious all-vegetable side dish that uses
+    <p>Delicious all-vegetable side dish that uses
         yellow squash, zucchini, onions, and red bell peppers as the main ingredients.
     </p>
     <br>
-    <p style="font-size:larger; font-weight: bold;"> <u>Ingredients</u> </p>
+    <p> <u>Ingredients</u> </p>
     <ul>
         <li>1 tablespoon unsalted butter</li>
         <li>1 tablespoon olive oil</li>
@@ -27,7 +27,7 @@
         <li>1 clove garlic, minced</li>
         <li>Minced chives (optional)</li>
     </ul>
-    <p style="font-size:larger; font-weight: bold;"> <u>Directions</u> </p>
+    <p> <u>Directions</u> </p>
     <ol>
         <li>Heat butter and olive oil together in a large non-stick skillet over medium-high heat.</li>
         <li>Add onion once butter is bubbly; cook and stir for 2 minutes.</li>
