--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Quick n Easy</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Quick n Easy Recipes</h1>
     <br>
     <img src="./images/animeCooking.gif" alt="Anime cooking gif" width="45%" class="centerImage">
     <p style="text-align:center">Source: The Garden of Words</p>
